test/semantic-errors/14.pas
program p;
begin writeln((2).size)end.
